a web version that works, pushed from 30000ft

--- a/web/index.html
+++ b/web/index.html
@@ -20,6 +20,7 @@ Module.TOTAL_MEMORY = 64 * 1024 * 1024;
 </head>
 <body>
 <div class="container">
+<button id=export>Export</button>
 <input type="file" multiple id=sample-input></input>
 </div>
 <script src="script.js"></script>
